{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 86,
  "lineage": "9dce2209-66a2-6e96-9911-4ebaa4d5825d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:902316339693:instance/i-06d77a8b6260e4c0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d77a8b6260e4c0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a93fd33f0341e2c",
            "private_dns": "ip-172-31-31-89.us-east-2.compute.internal",
            "private_ip": "172.31.31.89",
            "public_dns": "ec2-52-15-119-172.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.119.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2c3d88944cba284",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7971050291b03ef",
            "tags": {
              "Name": "terraform_ec2_instance"
            },
            "tags_all": {
              "Name": "terraform_ec2_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0471600eeb86c8505"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:internet-gateway/igw-06d2ae8c63703b0c5",
            "id": "igw-06d2ae8c63703b0c5",
            "owner_id": "902316339693",
            "vpc_id": "vpc-0487cec6092471360"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:902316339693:loadbalancer/app/terraform-alb/936a9bfca2ade037",
            "arn_suffix": "app/terraform-alb/936a9bfca2ade037",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-916055655.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:902316339693:loadbalancer/app/terraform-alb/936a9bfca2ade037",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb",
            "security_groups": [
              "sg-0b046b9508d949130"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b7971050291b03ef"
              },
              {
                "subnet_id": "subnet-0f1e33515d814b669"
              }
            ],
            "subnets": [
              "subnet-0b7971050291b03ef",
              "subnet-0f1e33515d814b669"
            ],
            "vpc_id": "vpc-0eac5787af2a09c4f",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.terraform_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-01ad44f0443124e11",
            "network_interface_id": "eni-0601dd739cb3000e3",
            "private_ip": "172.31.30.176",
            "subnet_id": "subnet-0b7971050291b03ef"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:route-table/rtb-0f1d452033415c816",
            "id": "rtb-0f1d452033415c816",
            "owner_id": "902316339693",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0487cec6092471360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:security-group/sg-0b046b9508d949130",
            "description": "allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b046b9508d949130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20211216191631940300000001",
            "name_prefix": "terraform-",
            "owner_id": "902316339693",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eac5787af2a09c4f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:vpc/vpc-0487cec6092471360",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.32.0/20",
            "default_network_acl_id": "acl-0fde6d3ec52483e33",
            "default_route_table_id": "rtb-07b54fcf5a68fd604",
            "default_security_group_id": "sg-054d15c50afd83b21",
            "dhcp_options_id": "dopt-00a769e81a563d410",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0487cec6092471360",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07b54fcf5a68fd604",
            "owner_id": "902316339693",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}